feat(backend): implemented basic control-plane features
